--- a/client/src/components/CommonComponents/ResultCard/index.css
+++ b/client/src/components/CommonComponents/ResultCard/index.css
@@ -69,13 +69,13 @@
 }
 
 .div--card-result .div--logo .div--hidden ul li{
-    font-size: 20px;
+    font-size: 110%;
     line-height: 1.5;
 }
 
 .div--card-result .div--logo .div--hidden ul li span{
     font-weight: bolder;
-    font-size: 18px;
+    font-size: 100%;
 }
 
 .div--card-result:hover .div--hidden {
