--- a/client/src/components/CharityDetalis/Contact/style.css
+++ b/client/src/components/CharityDetalis/Contact/style.css
@@ -77,3 +77,16 @@ background-color: #9bd2ff;
 .header {
   padding-left: 15px;
 }
+
+.button--link-website {
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 17px;
+  color: #000;
+  cursor: pointer;
+}
+
+.button--link-website:hover {
+  color: #0067dd;
+}
