--- a/client/src/components/HomePage/ContactUs/index.css
+++ b/client/src/components/HomePage/ContactUs/index.css
@@ -8,14 +8,14 @@
     background-repeat: no-repeat;
     background-size: cover;
 }   
-.overlay{
+.overlayContact{
     width:100%;
     height: 100%;
     background-color: rgba(0,0,0,.5); 
     display: flex;
     flex-direction: column;
 }
-.contactUs{
+.contactUsSection{
     background-color: rgba(0,0,0,.5);
     height: 75%;
     width: 45%;
@@ -49,7 +49,7 @@
     font-family: "Spectral";
 }
 .textAreaContact{
-    height: 90px;
+    height: 120px;
     padding-top: 9px;
 }
 .contactButton{
