--- a/client/src/components/Comparison/index.css
+++ b/client/src/components/Comparison/index.css
@@ -2,7 +2,7 @@
   margin-top: 107px;
   background-color: #F7F7F7;
   padding: 5px;
-padding-bottom: 40px;
+  padding-bottom: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -11,7 +11,6 @@ padding-bottom: 40px;
 
 .compare-box {
   position: relative;
-  /* margin: 40px auto; */
   width: 60%;
 }
 
@@ -27,7 +26,6 @@ padding-bottom: 40px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* border: 1px dashed #F89963; */
 }
 
 .page-desc {
@@ -92,8 +90,7 @@ padding-bottom: 40px;
 
 .logos {
   height: 50px;
-  width:900px;
-  /* margin: 0px 12.6%; */
+  width: 900px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -105,7 +102,7 @@ padding-bottom: 40px;
   align-items: center;
   justify-content: space-around;
   height: 50px;
-  width:217px;
+  width: 217px;
   color: #FFF;
   background-color: #9bd2ff;
   line-height: 5;
@@ -125,30 +122,25 @@ padding-bottom: 40px;
 
 .compare-div {
   background-color: #FFF;
-  /* margin: 0 auto; */
   height: 750px;
   width: 900px;
-  /* border-top-right-radius: 15px; */
   border-bottom-right-radius: 15px;
-  /* box-shadow: 1px 1px 3px 2px #5a6e7b47; */
   border: 1px solid #0067bb;
   display: flex;
 }
 
 .column-div {
+  background-color: #F2F2F2;
+  height: 750px;
   display: inline-block;
   width: 25%;
-  /* background-color: #DEDEDE; */
-  background-color:#F2F2F2;
-  height:750px;
   box-sizing: border-box;
-padding-top: 197px;
+  padding-top: 197px;
 }
 
 .table-logo {
   width: 80%;
   height: 50px;
-  /* background-color: yellow; */
   margin: 10px auto;
   box-sizing: border-box;
   padding: 9px;
@@ -171,7 +163,7 @@ padding-top: 197px;
   align-items: center;
   justify-content: space-around;
   box-sizing: border-box;
-    background-color: #FFF;
+  background-color: #FFF;
 }
 
 .table-cell {
@@ -184,10 +176,12 @@ padding-top: 197px;
   justify-content: space-around;
   align-items: center;
 }
-.table-cell:nth-child(even){
+
+.table-cell:nth-child(even) {
   background-color: #F2F2F2;
 }
-.table-cell:nth-child(odd){
+
+.table-cell:nth-child(odd) {
   background-color: #E6E6E6;
 }
 
@@ -215,7 +209,6 @@ padding-top: 197px;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
-  /* Position the tooltip */
   position: absolute;
   z-index: 1;
 }
@@ -229,22 +222,20 @@ padding-top: 197px;
 .content-div {
   display: flex;
   width: 79.9%;
-  /* background-color: #CECCCC; */
   background-color: #FFF;
   height: 750px;
-  /* border-top-right-radius: 15px; */
+  border-left: .7px dashed #0067bb;
   border-bottom-right-radius: 15px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-left: .7px dashed #0067bb;
 }
 
-.cname-div , .cLogo-div {
+.cname-div, .cLogo-div {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items:center;
+  align-items: center;
   width: 100%;
   height: 70px;
 }
@@ -254,16 +245,15 @@ padding-top: 197px;
   width: 30%;
   height: 80px;
   padding: 5px;
-  /* background-color: #FFF; */
   box-sizing: border-box;
-  /* border: 1px solid #FFF; */
 }
 
 .name-column h3 {
   font-size: 12px;
   font-weight: 700px;
 }
-.charity-logo{
+
+.charity-logo {
   width: 80px;
   height: 70px;
   border: 1px dashed #0067bb;
@@ -272,26 +262,23 @@ padding-top: 197px;
 .columns-div {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
-
 }
 
 .charity-column {
-  /* box-shadow: 1px 1px 3px 2px #5a6e7b47; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   display: flex;
-  margin: 25px 25px;
+  margin: 25px 0;
   width: 30%;
   background-color: #FFF;
   height: 450px;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  /* border:1px solid #F89963; */
   transition: all 0.3s ease-out;
-
 }
 
 .charity-column:hover {
@@ -303,41 +290,45 @@ padding-top: 197px;
   width: 100%;
   height: 60px;
   text-align: center;
-  /* border-bottom: 1px solid #F89963; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
-.column-cell:nth-child(even){
+
+.column-cell:nth-child(even) {
   background-color: #F2F2F2;
 }
-.column-cell:nth-child(odd){
+
+.column-cell:nth-child(odd) {
   background-color: #E6E6E6;
 }
 
-.donate-buttons{
+.donate-buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items:center;
+  align-items: center;
   width: 100%;
-  height:50px;
+  height: 50px;
+}
 
+.donate-b {
+  background-color: #0067bb;
+  padding: 8px 65px;
+  font-size: 12px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: #FFF;
+  text-decoration: none;
 }
-.donate-b{
-background-color: #0067bb;
-padding: 8px 58px;
-outline: none;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-text-transform: uppercase;
-font-weight: 800;
-color: #FFF;
-}
-.donate-b:hover{
-background-color: #FFF;
-color: #000;
-border: 2px solid #0067bb;
+
+.donate-b:hover {
+  background-color: #FFF;
+  color: #000;
+  border: 2px solid #0067bb;
 }
