make charity name move user to charityDetalis

--- a/client/src/components/Comparison/HomeInfo/index.css
+++ b/client/src/components/Comparison/HomeInfo/index.css
@@ -1,3 +1,11 @@
 .name-cell {
   max-height: none;
 }
+
+.name-column:hover {
+  text-decoration: underline;
+}
+
+.name-column{
+  cursor: pointer;
+}
