--- a/client/src/components/confirmationPage/style.css
+++ b/client/src/components/confirmationPage/style.css
@@ -9,7 +9,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -170%);
-    color: rgb(255, 141, 75);
+    color: #0067bb;
     font-size: 44px;
     letter-spacing: 5px;
 }
@@ -23,7 +23,7 @@
 .circle1{
     width: 260px;
     height: 260px;
-    background-color: #F89963;
+    background-color: #0067bb;
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,.3);
     position: absolute;
     bottom: -40px;
@@ -52,7 +52,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: #F7AE85; 
+    background-color: #9bd2ff; 
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,.3);
     position: absolute;
     bottom: 220px;
@@ -65,7 +65,7 @@
     width: 130px;
     height: 130px;
     border-radius: 50%;
-    background-color: #F7AE85; 
+    background-color: #9bd2ff; 
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,.3);
     position: absolute;
     bottom: 350px;
