--- a/client/src/components/CharityDetalis/Kpis/style.css
+++ b/client/src/components/CharityDetalis/Kpis/style.css
@@ -33,14 +33,43 @@
 .kpi--item .progressBar {
   max-width: 80px;
   min-width: 80px;
+  display: inline-block;
+  margin: 0 auto;
 }
 
 .kpi--item {
-  min-width: 120px;
-  min-height: 80px;
+  height: 180px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .descrip-def {
   font-size: 13px;
-  color: #0896d3;
+  color: #ffffff;
+}
+.overlayInner{
+  position: absolute;
+  text-align: center;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(0,0,0,.7);
+  transition: all .5s;
+}
+.lastItem{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.kpi--item:hover .overlayInner{
+  opacity: 1;
+}
+.minMax{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
 }
