hover effect for all of the section in the charity details pae

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Spectral');
+@import url('https://fonts.googleapis.com/css?family=Alegreya');
 * {
   margin:0;
   padding: 0;
