--- a/client/src/components/CharityDetalis/Kpis/style.css
+++ b/client/src/components/CharityDetalis/Kpis/style.css
@@ -43,6 +43,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .descrip-def {
@@ -57,8 +58,9 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  background-color: rgba(0,0,0,.7);
+  background-color: rgba(0,0,0,.8);
   transition: all .5s;
+  padding: 10px;
 }
 .lastItem{
   display: flex;
@@ -72,4 +74,10 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+}
+.innerDef{
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-family: "Alegreya";
+  font-weight: 700;
 }
