--- a/client/src/components/CharityDetalis/Kpis/style.css
+++ b/client/src/components/CharityDetalis/Kpis/style.css
@@ -42,6 +42,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -73,7 +74,7 @@
 .minMax{
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 .innerDef{
   font-size: 15px;
