add animation when adding any charity to comparison

--- a/client/src/components/CommonComponents/CharityCount/style.css
+++ b/client/src/components/CommonComponents/CharityCount/style.css
@@ -55,3 +55,16 @@
 	color: red;
 	margin-left: 3px;
 }
+
+.fade {
+    animation-name: fade-in-keyframes;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
+    margin: 0 auto;
+  }
+  @keyframes fade-in-keyframes {
+    0% {transform: scale(1,1);}
+    50% {transform: scale(1.2)}
+    100% {transform: scale(1,1);}
+  } 
