--- a/client/src/components/Comparison/index.css
+++ b/client/src/components/Comparison/index.css
@@ -203,12 +203,12 @@
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 120px;
+  width: 200px;
   background-color: black;
   color: #fff;
   text-align: center;
   border-radius: 6px;
-  padding: 5px 0;
+  padding: 5px 3px;
   position: absolute;
   z-index: 1;
 }
@@ -292,7 +292,7 @@
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
