--- a/client/src/components/HomePage/Slide/index.css
+++ b/client/src/components/HomePage/Slide/index.css
@@ -2,13 +2,7 @@
   width: 100%;
   height: 45vh;
 }
-
-.alice-carousel {
-  text-align: center;
-}
-
 .alice-carousel__prev-btn [data-area]::after {
-  margin-right: 100px;
   color: rgb(61, 61, 61);
   font-size: 22px;
   color: #FAFAFA;
@@ -20,11 +14,11 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-right: 50px;
 
 }
 
 .alice-carousel__next-btn [data-area]::after {
-  margin-right: 300px;
   color: #FAFAFA;
   font-size: 22px;
   font-weight: 900;
@@ -35,6 +29,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-left: 50px;
 }
 
 .mainTitle {
@@ -44,8 +39,8 @@
   color: #0067bb;
   text-align: center;
   text-transform: uppercase;
-    letter-spacing: 5px;
-    font-size: 25px;
+  letter-spacing: 5px;
+  font-size: 25px;
 }
 
 .alice-carousel__prev-btn {
