--- a/client/src/components/Comparison/TabInformation/index.css
+++ b/client/src/components/Comparison/TabInformation/index.css
@@ -6,7 +6,7 @@
   border-radius: 6px 6px 0 0;
   padding: 10px;
   box-sizing: border-box;
-  border: 1px dashed #9bd2ff;
+  border: 1px solid #9bd2ff;
 }
 
 .Tab-iformation h3 {
