--- a/client/src/components/HomePage/LandingPage/index.css
+++ b/client/src/components/HomePage/LandingPage/index.css
@@ -117,14 +117,14 @@ z-index: 10;
 }
 .logo{
     position: absolute;
-    top: 24%;
+    top: 20%;
     left: 30%;
     text-align: center;
     z-index: 13;
     margin: -16px auto;
 }
 .logoOne{
-    font-size: 45px;
+    font-size: 60px;
     color: #0067bbd3;
     animation: moveLeft 1s;
 }
@@ -139,12 +139,12 @@ z-index: 10;
     z-index:13;
     position: absolute;
     top: 39%;
-    left: 30%;
+    left: 32%;
     text-align: center;
 }
 .search input {
-    width: 370px;
-    height: 26px;
+    width: 400px;
+    height: 30px;
     border-radius: 5px;
     border: none;
     padding:10px;
@@ -152,14 +152,12 @@ z-index: 10;
     outline: none;
 }
 .search h3{
-    margin-left: -100px;
+    margin-left: -20px;
     margin-top: 15px;
     color: #EFF0F2;
     cursor: pointer;
     letter-spacing: 2px;
-    font-size: 17px;
-    text-transform: uppercase;
-}
+    font-size: 20px;}
 .search h3:hover{
     color: #0076d6;
 }
