--- a/client/src/components/HomePage/Slide/index.css
+++ b/client/src/components/HomePage/Slide/index.css
@@ -1,6 +1,7 @@
 .movingSlider {
   width: 100%;
-  height: 45vh;
+  height: 58vh;
+  background-image:linear-gradient(to right, #00203a, #000911);
 }
 .alice-carousel__prev-btn [data-area]::after {
   color: rgb(61, 61, 61);
@@ -10,12 +11,11 @@
   font-family: "Spectral";
   content: ".   .   .";
   color: rgba(255, 255, 255, 0);
-  background: url(https://imgur.com/3JLh87m.png);
+  background: url(https://imgur.com/VOw31zm.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   margin-right: 50px;
-
 }
 
 .alice-carousel__next-btn [data-area]::after {
@@ -25,7 +25,7 @@
   font-family: "Spectral";
     content: "..   ..";
     color: rgba(255, 255, 255, 0);
-  background: url(https://imgur.com/THgLXQP.png);
+  background: url(https://imgur.com/zXRcALl.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,13 +34,15 @@
 
 .mainTitle {
   z-index: 22;
+  padding-top: 20px;
+  padding-bottom: 40px;
   width: 50%;
-  margin: 40px auto;
-  color: #0067bb;
+  margin: 0 auto;
+  color: #ffffff;
   text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: 25px;
+  letter-spacing: 1px;
+  font-size: 40px;
+  font-weight: 500;
 }
 
 .alice-carousel__prev-btn {
@@ -48,13 +50,20 @@
 }
 
 .alice-carousel__stage-item * {
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: 700;
   text-align: center;
   cursor: pointer;
   text-decoration: none;
+  
 }
-
+.yours-custom-class{
+  background-color: white;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+}
 .alice-carousel__stage-item *:hover {
   color: #0067bb;
 }
