--- a/client/src/components/HomePage/Works/index.css
+++ b/client/src/components/HomePage/Works/index.css
@@ -3,8 +3,8 @@
     width: 100vw;
     height:60vh;  
     text-align: center;
-    background-image:linear-gradient(to right, #00203a, #000911);
-    
+    background-image: url(https://image.freepik.com/free-photo/paper-textured-background_53876-30486.jpg);
+    background-size: cover;
 }
 .innerCards{
     width: 70%;
@@ -21,12 +21,10 @@
     position: relative;
     top: 30px;
     margin-bottom: 60px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 25px;
-    color: rgb(238, 238, 238);
-    font-family: "Bitter";
-    font-weight: 100;
+    letter-spacing: 1px;
+    font-size: 40px;
+    color: #0067bb;
+    font-weight: 500;
 }
 .inner{
     border-radius: 15px;
@@ -37,7 +35,7 @@
     flex-flow: column;
     margin: 20px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    background-color: rgb(255, 250, 240);
+    background-color: #fff;
     
 }
 .inner:hover{
