--- a/client/src/components/CharityDetalis/Kpis/style.css
+++ b/client/src/components/CharityDetalis/Kpis/style.css
@@ -38,13 +38,14 @@
 }
 
 .kpi--item {
+  border: 1px solid rgb(173, 173, 173);
   height: 180px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-bottom: 20px;
+
 }
 
 .descrip-def {
@@ -59,9 +60,8 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  background-color: rgba(0,0,0,.8);
+  background-color: rgba(0,0,0,.7);
   transition: all .5s;
-  padding: 10px;
 }
 .lastItem{
   display: flex;
@@ -81,4 +81,5 @@
   letter-spacing: 1px;
   font-family: "Alegreya";
   font-weight: 700;
+  padding: 10px;
 }
