--- a/client/src/components/HomePage/Slide/index.css
+++ b/client/src/components/HomePage/Slide/index.css
@@ -1,6 +1,6 @@
 .movingSlider {
   width: 100%;
-  height: 58vh;
+  height: 60vh;
   background-image:linear-gradient(to right, #00203a, #000911);
 }
 .alice-carousel__prev-btn [data-area]::after {
@@ -65,7 +65,7 @@
   padding: 10px;
 }
 .alice-carousel__stage-item *:hover {
-  color: #0067bb;
+  color: #9bd2ff;
 }
 
 .movingSlider h4 {
